--- a/templates/404.html
+++ b/templates/404.html
@@ -1,3 +1,3 @@
 <script type="text/html" id="404">
-    <h1>404 Not found</h1>
+    <h1 class="col-12 text-center my-5 link">404 Not found!</h1>
 </script>404
