--- a/templates/home.html
+++ b/templates/home.html
@@ -2,12 +2,12 @@
 <script type="text/html" id="home">
     <div class="container">
         <h1 class="col-12 text-center my-5 link">Please <%= where %>!</h1>
-        <form>
+        <form id="login-form">
             <div class="row justify-content-center">
-                <label for="login" class="col-12 text-center link">Login: </label>
-                <input type="text" name="login" id="login" placeholder="Login..." class="col-7 my-3"><br/><br/>
+                <label for="login" class="col-12 text-center link">Username: </label>
+                <input type="text" name="login" id="login" placeholder="Username..." value="" class="col-7 my-3"><br/><br/>
                 <label for="password" class="col-12 text-center link">Password: </label>
-                <input type="text" name="password" id="password" placeholder="password..." class="col-7 my-3">
+                <input type="text" name="password" id="password" placeholder="password..." value="" class="col-7 my-3">
                 <button type="submit" class="submit-btn col-7 my-1" id="submit-btn" >Submit!</button>
             </div>
         </form>
